add dfs